Move schema plugins to custom maven modules